--- a/composer.json
+++ b/composer.json
@@ -9,5 +9,12 @@
             "email": "djnecrogami@gmail.com"
         }
     ],
-    "require": {}
+    "require": {
+        "php": "^7.0"
+    },
+    "autoload": {
+        "psr-0": {
+            "necrogami\\SshTools": "src"
+        }
+    },
 }
